# Python-piscine-42

./: .gitignore
.github/workflow/: CI.yml
.github/workflows/: CI.yml
python00/ex0/: ft_hello_garden.py
python00/ex01/: ft_plot_area.py
python00/ex03/: ft_plant_age.py
python00/ex05/: ft_count_harvest_iterative.py
python00/ex06/: ft_garden_summary.py
python00/ex07/: ft_seed_inventory.py
python00/ex2/: ft_harvest_total.py
python00/ex4/: ft_water_reminder.py
python00/ex5/: ft_count_harvest_recursive.py
python00/ex7/: ft_seed_inventory.py
python01/ex0/: ft_garden_intro.py
python01/ex1/: ft_garden_data.py
python01/ex2/: ft_plant_growth.py
python01/ex3/: ft_plant_factory.py
python01/ex4/: ft_garden_security.py
python01/ex5/: ft_plant_types.py
python01/ex6/: ft_garden_analytics.py
python02/ex0/: ft_first_exception.py
python02/ex1/: ft_different_errors.py
python02/ex2/: ft_custom_errors.py
python02/ex3/: ft_finally_block.py
python02/ex4/: ft_raise_errors.py
python02/ex5/: ft_garden_management.py
python03/data_quest_tools/: exercise_1_helper.py
python03/ex0/: ft_command_quest.py
python03/ex1/: ft_score_analytics.py
python03/ex2/: ft_coordinate_system.py
python03/ex3/: ft_achievement_tracker.py
python03/ex4/: ft_inventory_system.py
python03/ex5/: ft_data_stream.py
python03/ex6/: ft_analytics_dashboard.py
python04/ex0/: ft_ancient_text.py
python05/: stream_processor.py
python06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python8/ex1/: loading.py  pyproject.toml
(+18 files in other folders)
