[tool.poetry]
name = "matrix"
version = "1.0.0"
description = "The Matrix data pipeline"
authors = ["Ton Nom <ton@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"